--- a/GasDuddy/GasDuddy.csproj
+++ b/GasDuddy/GasDuddy.csproj
@@ -37,6 +37,9 @@
     <Reference Include="CsQuery">
       <HintPath>..\packages\CsQuery.1.3.4\lib\net40\CsQuery.dll</HintPath>
     </Reference>
+    <Reference Include="Gurock.SmartInspect">
+      <HintPath>..\ThirdParties\Gurock.SmartInspect.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -61,6 +64,13 @@
       <Project>{be5fc04c-0534-40a0-92c6-5a80eb90c423}</Project>
       <Name>HelperFunctions</Name>
     </ProjectReference>
+    <ProjectReference Include="..\WebSpider\WebSpider.csproj">
+      <Project>{e782435c-9df5-4043-9ddc-74498fc1b4ea}</Project>
+      <Name>WebSpider</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
