--- a/GasDuddy/GasDuddy.csproj
+++ b/GasDuddy/GasDuddy.csproj
@@ -52,8 +52,12 @@
   <ItemGroup>
     <Compile Include="Authorization.cs" />
     <Compile Include="BaseClass.cs" />
+    <Compile Include="CommonAction.cs" />
+    <Compile Include="Model\Common.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\User.cs" />
+    <Compile Include="UserAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
