--- a/GasDuddy/App.config
+++ b/GasDuddy/App.config
@@ -4,6 +4,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="InternalDB" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\aspnet-Blablabla.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Local" connectionString="Server=(localdb)\v11.0;Database=Startup;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
