--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -35,11 +35,19 @@
     <StartupObject>TestApp.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,6 +68,14 @@
     <ProjectReference Include="..\Blablabla\Blablabla.csproj">
       <Project>{4df1305f-388b-4ca5-bee1-4a37ab276050}</Project>
       <Name>Blablabla</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GasBuddy.Infrastructure\GasBuddy.Infrastructure.csproj">
+      <Project>{8e40ffca-8aec-47d6-b07d-1c1f4a965e64}</Project>
+      <Name>GasBuddy.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GasBuddy.Model\GasBuddy.Model.csproj">
+      <Project>{e86c5870-92cc-4f9d-b8b9-4dcb60fa8488}</Project>
+      <Name>GasBuddy.Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\GasDuddy\GasBuddy.csproj">
       <Project>{41165e05-b147-44cb-b055-a739f73f91c9}</Project>
