--- a/GasBuddy.Service/App.config
+++ b/GasBuddy.Service/App.config
@@ -13,4 +13,8 @@
   <connectionStrings>
     <add name="Db" connectionString="data source=(localdb)\v11.0;AttachDbFilename=C:\Projects\startup\Startup.mdf;initial catalog=Startup;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="IntervalBetweenProcessingInMinutes" value="3"></add>
+    
+  </appSettings>
 </configuration>
