--- a/GasBuddy.Infrastructure/GasBuddy.Infrastructure.csproj
+++ b/GasBuddy.Infrastructure/GasBuddy.Infrastructure.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8E40FFCA-8AEC-47D6-B07D-1C1F4A965E64}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GasBuddy.Infrastructure</RootNamespace>
     <AssemblyName>GasBuddy.Infrastructure</AssemblyName>
@@ -31,6 +31,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -54,8 +58,9 @@
   <ItemGroup>
     <Compile Include="Base\Db.cs" />
     <Compile Include="ProcessQueueF.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Stations.cs" />
-    <Compile Include="UsersFunc.cs" />
+    <Compile Include="UserFunc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +74,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
